--- a/configs/ct-x64-chrome.cfg
+++ b/configs/ct-x64-chrome.cfg
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 3.16.0 Kernel Configuration
+# Linux/x86 3.17.0-rc5 Kernel Configuration
 #
 CONFIG_64BIT=y
 CONFIG_X86_64=y
@@ -87,6 +87,7 @@ CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_SPARSE_IRQ=y
 CONFIG_CLOCKSOURCE_WATCHDOG=y
 CONFIG_ARCH_CLOCKSOURCE_DATA=y
+CONFIG_CLOCKSOURCE_VALIDATE_LAST_CYCLE=y
 CONFIG_GENERIC_TIME_VSYSCALL=y
 CONFIG_GENERIC_CLOCKEVENTS=y
 CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
@@ -128,9 +129,11 @@ CONFIG_RCU_FANOUT_LEAF=16
 # CONFIG_TREE_RCU_TRACE is not set
 # CONFIG_RCU_BOOST is not set
 # CONFIG_RCU_NOCB_CPU is not set
+CONFIG_BUILD_BIN2C=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_LOG_BUF_SHIFT=18
+CONFIG_LOG_CPU_MAX_BUF_SHIFT=12
 CONFIG_HAVE_UNSTABLE_SCHED_CLOCK=y
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
 CONFIG_ARCH_SUPPORTS_INT128=y
@@ -431,6 +434,7 @@ CONFIG_ARCH_SUPPORTS_MEMORY_FAILURE=y
 # CONFIG_CLEANCACHE is not set
 # CONFIG_FRONTSWAP is not set
 # CONFIG_CMA is not set
+# CONFIG_ZPOOL is not set
 # CONFIG_ZBUD is not set
 # CONFIG_ZSMALLOC is not set
 CONFIG_GENERIC_EARLY_IOREMAP=y
@@ -486,6 +490,8 @@ CONFIG_PM_TRACE_RTC=y
 CONFIG_PM_CLK=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_ACPI=y
+CONFIG_ACPI_LEGACY_TABLES_LOOKUP=y
+CONFIG_ARCH_MIGHT_HAVE_ACPI_PDC=y
 CONFIG_ACPI_SLEEP=y
 # CONFIG_ACPI_PROCFS_POWER is not set
 # CONFIG_ACPI_EC_DEBUGFS is not set
@@ -510,6 +516,8 @@ CONFIG_ACPI_CONTAINER=y
 # CONFIG_ACPI_CUSTOM_METHOD is not set
 # CONFIG_ACPI_BGRT is not set
 # CONFIG_ACPI_REDUCED_HARDWARE_ONLY is not set
+CONFIG_HAVE_ACPI_APEI=y
+CONFIG_HAVE_ACPI_APEI_NMI=y
 # CONFIG_ACPI_APEI is not set
 # CONFIG_ACPI_EXTLOG is not set
 # CONFIG_SFI is not set
@@ -553,7 +561,6 @@ CONFIG_X86_ACPI_CPUFREQ_CPB=y
 # CPU Idle
 #
 CONFIG_CPU_IDLE=y
-# CONFIG_CPU_IDLE_MULTIPLE_DRIVERS is not set
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
 # CONFIG_ARCH_NEEDS_CPU_IDLE_COUPLED is not set
@@ -627,6 +634,7 @@ CONFIG_SYSVIPC_COMPAT=y
 CONFIG_KEYS_COMPAT=y
 CONFIG_X86_DEV_DMA_OPS=y
 CONFIG_IOSF_MBI=m
+CONFIG_PMC_ATOM=y
 CONFIG_NET=y
 CONFIG_COMPAT_NETLINK_MESSAGES=y
 
@@ -664,6 +672,7 @@ CONFIG_IP_PIMSM_V1=y
 CONFIG_IP_PIMSM_V2=y
 CONFIG_SYN_COOKIES=y
 # CONFIG_NET_IPVTI is not set
+# CONFIG_NET_UDP_TUNNEL is not set
 CONFIG_INET_AH=m
 CONFIG_INET_ESP=m
 CONFIG_INET_IPCOMP=m
@@ -733,6 +742,7 @@ CONFIG_NETFILTER_NETLINK_ACCT=m
 CONFIG_NETFILTER_NETLINK_QUEUE=y
 CONFIG_NETFILTER_NETLINK_LOG=y
 CONFIG_NF_CONNTRACK=y
+CONFIG_NF_LOG_COMMON=m
 CONFIG_NF_CONNTRACK_MARK=y
 CONFIG_NF_CONNTRACK_SECMARK=y
 CONFIG_NF_CONNTRACK_PROCFS=y
@@ -794,6 +804,7 @@ CONFIG_NETFILTER_XT_TARGET_IDLETIMER=m
 CONFIG_NETFILTER_XT_TARGET_LED=m
 CONFIG_NETFILTER_XT_TARGET_LOG=m
 CONFIG_NETFILTER_XT_TARGET_MARK=m
+CONFIG_NETFILTER_XT_NAT=m
 CONFIG_NETFILTER_XT_TARGET_NETMAP=m
 CONFIG_NETFILTER_XT_TARGET_NFLOG=y
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
@@ -879,6 +890,13 @@ CONFIG_IP_SET_MAX=256
 CONFIG_NF_DEFRAG_IPV4=y
 CONFIG_NF_CONNTRACK_IPV4=y
 CONFIG_NF_CONNTRACK_PROC_COMPAT=y
+CONFIG_NF_LOG_ARP=m
+CONFIG_NF_LOG_IPV4=m
+CONFIG_NF_NAT_IPV4=m
+CONFIG_NF_NAT_SNMP_BASIC=m
+CONFIG_NF_NAT_PROTO_GRE=m
+CONFIG_NF_NAT_PPTP=m
+CONFIG_NF_NAT_H323=m
 CONFIG_IP_NF_IPTABLES=y
 CONFIG_IP_NF_MATCH_AH=m
 CONFIG_IP_NF_MATCH_ECN=m
@@ -887,15 +905,10 @@ CONFIG_IP_NF_MATCH_TTL=m
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
 # CONFIG_IP_NF_TARGET_SYNPROXY is not set
-CONFIG_IP_NF_TARGET_ULOG=y
-CONFIG_NF_NAT_IPV4=m
+CONFIG_IP_NF_NAT=m
 CONFIG_IP_NF_TARGET_MASQUERADE=m
 CONFIG_IP_NF_TARGET_NETMAP=m
 CONFIG_IP_NF_TARGET_REDIRECT=m
-CONFIG_NF_NAT_SNMP_BASIC=m
-CONFIG_NF_NAT_PROTO_GRE=m
-CONFIG_NF_NAT_PPTP=m
-CONFIG_NF_NAT_H323=m
 CONFIG_IP_NF_MANGLE=y
 # CONFIG_IP_NF_TARGET_CLUSTERIP is not set
 # CONFIG_IP_NF_TARGET_ECN is not set
@@ -911,6 +924,8 @@ CONFIG_IP_NF_ARP_MANGLE=m
 #
 CONFIG_NF_DEFRAG_IPV6=m
 CONFIG_NF_CONNTRACK_IPV6=m
+CONFIG_NF_LOG_IPV6=m
+CONFIG_NF_NAT_IPV6=m
 CONFIG_IP6_NF_IPTABLES=m
 CONFIG_IP6_NF_MATCH_AH=m
 CONFIG_IP6_NF_MATCH_EUI64=m
@@ -928,7 +943,7 @@ CONFIG_IP6_NF_TARGET_REJECT=m
 CONFIG_IP6_NF_MANGLE=m
 CONFIG_IP6_NF_RAW=m
 # CONFIG_IP6_NF_SECURITY is not set
-CONFIG_NF_NAT_IPV6=m
+CONFIG_IP6_NF_NAT=m
 CONFIG_IP6_NF_TARGET_MASQUERADE=m
 CONFIG_IP6_NF_TARGET_NPT=m
 # CONFIG_BRIDGE_NF_EBTABLES is not set
@@ -954,6 +969,7 @@ CONFIG_LLC=m
 # CONFIG_X25 is not set
 # CONFIG_LAPB is not set
 # CONFIG_PHONET is not set
+CONFIG_6LOWPAN=m
 # CONFIG_IEEE802154 is not set
 CONFIG_NET_SCHED=y
 
@@ -1072,7 +1088,6 @@ CONFIG_LIB80211_CRYPT_TKIP=m
 # CONFIG_LIB80211_DEBUG is not set
 CONFIG_MAC80211=m
 CONFIG_MAC80211_HAS_RC=y
-# CONFIG_MAC80211_RC_PID is not set
 CONFIG_MAC80211_RC_MINSTREL=y
 CONFIG_MAC80211_RC_MINSTREL_HT=y
 CONFIG_MAC80211_RC_DEFAULT_MINSTREL=y
@@ -1118,7 +1133,7 @@ CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_FW_LOADER=y
 CONFIG_FIRMWARE_IN_KERNEL=y
 CONFIG_EXTRA_FIRMWARE=""
-CONFIG_FW_LOADER_USER_HELPER=y
+# CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
 # CONFIG_DEBUG_DRIVER is not set
 CONFIG_DEBUG_DEVRES=y
 # CONFIG_SYS_HYPERVISOR is not set
@@ -1127,6 +1142,7 @@ CONFIG_GENERIC_CPU_AUTOPROBE=y
 CONFIG_REGMAP=y
 CONFIG_REGMAP_I2C=m
 CONFIG_DMA_SHARED_BUFFER=y
+# CONFIG_FENCE_TRACE is not set
 
 #
 # Bus devices
@@ -1224,14 +1240,17 @@ CONFIG_EEPROM_93CX6=m
 # CONFIG_VMWARE_VMCI is not set
 
 #
+# Intel MIC Bus Driver
+#
+# CONFIG_INTEL_MIC_BUS is not set
+
+#
 # Intel MIC Host Driver
 #
-# CONFIG_INTEL_MIC_HOST is not set
 
 #
 # Intel MIC Card Driver
 #
-# CONFIG_INTEL_MIC_CARD is not set
 # CONFIG_GENWQE is not set
 # CONFIG_ECHO is not set
 CONFIG_HAVE_IDE=y
@@ -1244,7 +1263,6 @@ CONFIG_SCSI_MOD=y
 # CONFIG_RAID_ATTRS is not set
 CONFIG_SCSI=y
 CONFIG_SCSI_DMA=y
-# CONFIG_SCSI_TGT is not set
 # CONFIG_SCSI_NETLINK is not set
 CONFIG_SCSI_PROC_FS=y
 
@@ -1258,7 +1276,6 @@ CONFIG_BLK_DEV_SR=m
 # CONFIG_BLK_DEV_SR_VENDOR is not set
 # CONFIG_CHR_DEV_SG is not set
 # CONFIG_CHR_DEV_SCH is not set
-CONFIG_SCSI_MULTI_LUN=y
 CONFIG_SCSI_CONSTANTS=y
 # CONFIG_SCSI_LOGGING is not set
 # CONFIG_SCSI_SCAN_ASYNC is not set
@@ -1328,7 +1345,6 @@ CONFIG_ISCSI_BOOT_SYSFS=m
 # CONFIG_SCSI_DEBUG is not set
 # CONFIG_SCSI_PMCRAID is not set
 # CONFIG_SCSI_PM8001 is not set
-# CONFIG_SCSI_SRP is not set
 # CONFIG_SCSI_BFA_FC is not set
 # CONFIG_SCSI_VIRTIO is not set
 # CONFIG_SCSI_CHELSIO_FCOE is not set
@@ -1497,6 +1513,7 @@ CONFIG_ETHERNET=y
 # CONFIG_NET_VENDOR_ALTEON is not set
 # CONFIG_ALTERA_TSE is not set
 # CONFIG_NET_VENDOR_AMD is not set
+# CONFIG_NET_XGENE is not set
 CONFIG_NET_VENDOR_ARC=y
 # CONFIG_NET_VENDOR_ATHEROS is not set
 CONFIG_NET_VENDOR_BROADCOM=y
@@ -1506,7 +1523,6 @@ CONFIG_NET_VENDOR_BROADCOM=y
 CONFIG_TIGON3=m
 # CONFIG_BNX2X is not set
 # CONFIG_NET_VENDOR_BROCADE is not set
-# CONFIG_NET_CALXEDA_XGMAC is not set
 # CONFIG_NET_VENDOR_CHELSIO is not set
 # CONFIG_NET_VENDOR_CISCO is not set
 # CONFIG_CX_ECAT is not set
@@ -1546,7 +1562,6 @@ CONFIG_NET_VENDOR_REALTEK=y
 # CONFIG_8139CP is not set
 # CONFIG_8139TOO is not set
 CONFIG_R8169=m
-# CONFIG_SH_ETH is not set
 # CONFIG_NET_VENDOR_RDC is not set
 CONFIG_NET_VENDOR_SAMSUNG=y
 # CONFIG_SXGBE_ETH is not set
@@ -1603,10 +1618,7 @@ CONFIG_PPP_ASYNC=m
 # CONFIG_PPP_SYNC_TTY is not set
 # CONFIG_SLIP is not set
 CONFIG_SLHC=m
-
-#
-# USB Network Adapters
-#
+CONFIG_USB_NET_DRIVERS=y
 # CONFIG_USB_CATC is not set
 # CONFIG_USB_KAWETH is not set
 CONFIG_USB_PEGASUS=m
@@ -1674,9 +1686,11 @@ CONFIG_ATH9K_PCI=y
 CONFIG_ATH9K_DEBUGFS=y
 # CONFIG_ATH9K_STATION_STATISTICS is not set
 # CONFIG_ATH9K_DFS_CERTIFIED is not set
+# CONFIG_ATH9K_DYNACK is not set
 # CONFIG_ATH9K_TX99 is not set
 # CONFIG_ATH9K_WOW is not set
 CONFIG_ATH9K_RFKILL=y
+# CONFIG_ATH9K_CHANNEL_CONTEXT is not set
 CONFIG_ATH9K_HTC=m
 CONFIG_ATH9K_HTC_DEBUGFS=y
 CONFIG_CARL9170=m
@@ -1706,8 +1720,10 @@ CONFIG_ATH10K_TRACING=y
 CONFIG_BRCMUTIL=m
 # CONFIG_BRCMSMAC is not set
 CONFIG_BRCMFMAC=m
+CONFIG_BRCMFMAC_PROTO_BCDC=y
 CONFIG_BRCMFMAC_SDIO=y
 CONFIG_BRCMFMAC_USB=y
+# CONFIG_BRCMFMAC_PCIE is not set
 # CONFIG_BRCM_TRACING is not set
 # CONFIG_BRCMDBG is not set
 CONFIG_HOSTAP=m
@@ -1723,6 +1739,7 @@ CONFIG_IWLDVM=m
 CONFIG_IWLMVM=m
 CONFIG_IWLWIFI_OPMODE_MODULAR=y
 # CONFIG_IWLWIFI_BCAST_FILTERING is not set
+# CONFIG_IWLWIFI_UAPSD is not set
 
 #
 # Debugging Options
@@ -2038,7 +2055,12 @@ CONFIG_TCG_TIS=y
 # CONFIG_TCG_ST33_I2C is not set
 # CONFIG_TELCLOCK is not set
 CONFIG_DEVPORT=y
+
+#
+# I2C support
+#
 CONFIG_I2C=y
+CONFIG_ACPI_I2C_OPREGION=y
 CONFIG_I2C_BOARDINFO=y
 CONFIG_I2C_COMPAT=y
 CONFIG_I2C_CHARDEV=m
@@ -2161,8 +2183,6 @@ CONFIG_PINCTRL=y
 #
 # Pin controllers
 #
-# CONFIG_PINMUX is not set
-# CONFIG_PINCONF is not set
 # CONFIG_DEBUG_PINCTRL is not set
 # CONFIG_PINCTRL_BAYTRAIL is not set
 CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
@@ -2295,6 +2315,7 @@ CONFIG_HWMON=y
 CONFIG_SENSORS_CORETEMP=y
 # CONFIG_SENSORS_IT87 is not set
 # CONFIG_SENSORS_JC42 is not set
+# CONFIG_SENSORS_POWR1220 is not set
 # CONFIG_SENSORS_LINEAGE is not set
 # CONFIG_SENSORS_LTC2945 is not set
 # CONFIG_SENSORS_LTC4151 is not set
@@ -2362,6 +2383,7 @@ CONFIG_SENSORS_CORETEMP=y
 # CONFIG_SENSORS_INA2XX is not set
 # CONFIG_SENSORS_THMC50 is not set
 # CONFIG_SENSORS_TMP102 is not set
+# CONFIG_SENSORS_TMP103 is not set
 # CONFIG_SENSORS_TMP401 is not set
 # CONFIG_SENSORS_TMP421 is not set
 # CONFIG_SENSORS_VIA_CPUTEMP is not set
@@ -2470,7 +2492,6 @@ CONFIG_BCMA_POSSIBLE=y
 # Multifunction device drivers
 #
 CONFIG_MFD_CORE=m
-# CONFIG_MFD_CS5535 is not set
 # CONFIG_MFD_AS3711 is not set
 # CONFIG_PMIC_ADP5520 is not set
 # CONFIG_MFD_AAT2870_CORE is not set
@@ -2489,6 +2510,7 @@ CONFIG_MFD_CROS_EC_I2C=m
 # CONFIG_HTC_I2CPLD is not set
 # CONFIG_LPC_ICH is not set
 CONFIG_LPC_SCH=m
+# CONFIG_INTEL_SOC_PMIC is not set
 # CONFIG_MFD_JANZ_CMODIO is not set
 CONFIG_MFD_KEMPLD=m
 # CONFIG_MFD_88PM800 is not set
@@ -2535,7 +2557,6 @@ CONFIG_MFD_KEMPLD=m
 # CONFIG_TWL6040_CORE is not set
 # CONFIG_MFD_WL1273_CORE is not set
 # CONFIG_MFD_LM3533 is not set
-# CONFIG_MFD_TIMBERDALE is not set
 # CONFIG_MFD_TC3589X is not set
 # CONFIG_MFD_TMIO is not set
 # CONFIG_MFD_VX855 is not set
@@ -2556,6 +2577,7 @@ CONFIG_MEDIA_SUPPORT=m
 # CONFIG_MEDIA_ANALOG_TV_SUPPORT is not set
 # CONFIG_MEDIA_DIGITAL_TV_SUPPORT is not set
 # CONFIG_MEDIA_RADIO_SUPPORT is not set
+# CONFIG_MEDIA_SDR_SUPPORT is not set
 # CONFIG_MEDIA_RC_SUPPORT is not set
 # CONFIG_VIDEO_ADV_DEBUG is not set
 # CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
@@ -2900,6 +2922,7 @@ CONFIG_HID_CHERRY=m
 # CONFIG_HID_ELO is not set
 # CONFIG_HID_EZKEY is not set
 # CONFIG_HID_HOLTEK is not set
+# CONFIG_HID_GT683R is not set
 # CONFIG_HID_HUION is not set
 # CONFIG_HID_KEYTOUCH is not set
 # CONFIG_HID_KYE is not set
@@ -2910,7 +2933,7 @@ CONFIG_HID_CHERRY=m
 # CONFIG_HID_TWINHAN is not set
 # CONFIG_HID_KENSINGTON is not set
 # CONFIG_HID_LCPOWER is not set
-# CONFIG_HID_LENOVO_TPKBD is not set
+# CONFIG_HID_LENOVO is not set
 CONFIG_HID_LOGITECH=m
 CONFIG_HID_LOGITECH_DJ=m
 # CONFIG_LOGITECH_FF is not set
@@ -3042,6 +3065,7 @@ CONFIG_REALTEK_AUTOPM=y
 #
 # CONFIG_USB_MDC800 is not set
 # CONFIG_USB_MICROTEK is not set
+# CONFIG_USBIP_CORE is not set
 # CONFIG_USB_MUSB_HDRC is not set
 # CONFIG_USB_DWC3 is not set
 # CONFIG_USB_DWC2 is not set
@@ -3143,6 +3167,7 @@ CONFIG_USB_SERIAL_OPTION=m
 # CONFIG_USB_YUREX is not set
 CONFIG_USB_EZUSB_FX2=m
 # CONFIG_USB_HSIC_USB3503 is not set
+# CONFIG_USB_LINK_LAYER_TEST is not set
 
 #
 # USB Physical Layer drivers
@@ -3268,6 +3293,7 @@ CONFIG_RTC_INTF_DEV=y
 # CONFIG_RTC_DRV_PCF2127 is not set
 # CONFIG_RTC_DRV_PCF8523 is not set
 # CONFIG_RTC_DRV_PCF8563 is not set
+# CONFIG_RTC_DRV_PCF85063 is not set
 # CONFIG_RTC_DRV_PCF8583 is not set
 # CONFIG_RTC_DRV_M41T80 is not set
 # CONFIG_RTC_DRV_BQ32K is not set
@@ -3303,6 +3329,8 @@ CONFIG_RTC_DRV_CMOS=y
 # CONFIG_RTC_DRV_DS1511 is not set
 # CONFIG_RTC_DRV_DS1553 is not set
 # CONFIG_RTC_DRV_DS1742 is not set
+# CONFIG_RTC_DRV_DS2404 is not set
+# CONFIG_RTC_DRV_EFI is not set
 # CONFIG_RTC_DRV_STK17TA8 is not set
 # CONFIG_RTC_DRV_M48T86 is not set
 # CONFIG_RTC_DRV_M48T35 is not set
@@ -3311,12 +3339,10 @@ CONFIG_RTC_DRV_CMOS=y
 # CONFIG_RTC_DRV_BQ4802 is not set
 # CONFIG_RTC_DRV_RP5C01 is not set
 # CONFIG_RTC_DRV_V3020 is not set
-# CONFIG_RTC_DRV_DS2404 is not set
 
 #
 # on-CPU RTC drivers
 #
-# CONFIG_RTC_DRV_MOXART is not set
 # CONFIG_RTC_DRV_XGENE is not set
 
 #
@@ -3342,8 +3368,6 @@ CONFIG_VIRTIO_PCI=m
 CONFIG_STAGING=y
 # CONFIG_ET131X is not set
 # CONFIG_SLICOSS is not set
-# CONFIG_USBIP_CORE is not set
-# CONFIG_W35UND is not set
 # CONFIG_PRISM2_USB is not set
 # CONFIG_COMEDI is not set
 # CONFIG_RTL8192U is not set
@@ -3358,13 +3382,9 @@ CONFIG_RTLLIB_CRYPTO_WEP=m
 # CONFIG_R8723AU is not set
 # CONFIG_R8821AE is not set
 # CONFIG_RTS5208 is not set
-# CONFIG_TRANZPORT is not set
-# CONFIG_IDE_PHISON is not set
 # CONFIG_LINE6_USB is not set
-# CONFIG_USB_SERIAL_QUATECH2 is not set
 # CONFIG_VT6655 is not set
 # CONFIG_VT6656 is not set
-# CONFIG_DX_SEP is not set
 
 #
 # IIO staging drivers
@@ -3384,7 +3404,6 @@ CONFIG_RTLLIB_CRYPTO_WEP=m
 #
 # Analog to digital converters
 #
-# CONFIG_AD7291 is not set
 # CONFIG_AD7606 is not set
 # CONFIG_AD7780 is not set
 # CONFIG_AD7816 is not set
@@ -3435,7 +3454,8 @@ CONFIG_TSL2583=m
 #
 # Magnetometer sensors
 #
-# CONFIG_SENSORS_HMC5843 is not set
+# CONFIG_SENSORS_HMC5843_I2C is not set
+# CONFIG_SENSORS_HMC5843_SPI is not set
 
 #
 # Active energy metering IC
@@ -3457,10 +3477,7 @@ CONFIG_TSL2583=m
 # Triggers - standalone
 #
 # CONFIG_IIO_SIMPLE_DUMMY is not set
-# CONFIG_CRYSTALHD is not set
 # CONFIG_FB_XGI is not set
-# CONFIG_ACPI_QUICKSTART is not set
-# CONFIG_USB_ENESTORAGE is not set
 # CONFIG_BCM_WIMAX is not set
 # CONFIG_FT1000 is not set
 
@@ -3479,11 +3496,6 @@ CONFIG_TSL2583=m
 # CONFIG_USB_WPAN_HCD is not set
 # CONFIG_WIMAX_GDM72XX is not set
 # CONFIG_LTE_GDM724X is not set
-CONFIG_NET_VENDOR_SILICOM=y
-# CONFIG_SBYPASS is not set
-# CONFIG_BPCTL is not set
-# CONFIG_CED1401 is not set
-# CONFIG_DGRP is not set
 # CONFIG_LUSTRE_FS is not set
 # CONFIG_XILLYBUS is not set
 # CONFIG_DGNC is not set
@@ -3491,6 +3503,7 @@ CONFIG_NET_VENDOR_SILICOM=y
 # CONFIG_GS_FPGABOOT is not set
 # CONFIG_CRYPTO_SKEIN is not set
 # CONFIG_CRYPTO_THREEFISH is not set
+# CONFIG_UNISYSSPAR is not set
 CONFIG_X86_PLATFORM_DEVICES=y
 # CONFIG_ACER_WMI is not set
 CONFIG_ACERHDF=m
@@ -3520,6 +3533,7 @@ CONFIG_ACPI_WMI=m
 # CONFIG_TOPSTAR_LAPTOP is not set
 # CONFIG_ACPI_TOSHIBA is not set
 # CONFIG_TOSHIBA_BT_RFKILL is not set
+# CONFIG_TOSHIBA_HAPS is not set
 # CONFIG_ACPI_CMPC is not set
 # CONFIG_INTEL_IPS is not set
 # CONFIG_IBM_RTL is not set
@@ -3547,6 +3561,10 @@ CONFIG_COMMON_CLK=y
 
 #
 # Hardware Spinlock drivers
+#
+
+#
+# Clock Source drivers
 #
 CONFIG_CLKEVT_I8253=y
 CONFIG_CLKBLD_I8253=y
@@ -3582,11 +3600,13 @@ CONFIG_IIO=m
 # CONFIG_IIO_ST_ACCEL_3AXIS is not set
 # CONFIG_KXSD9 is not set
 # CONFIG_MMA8452 is not set
+# CONFIG_KXCJK1013 is not set
 
 #
 # Analog to digital converters
 #
 # CONFIG_AD7266 is not set
+# CONFIG_AD7291 is not set
 # CONFIG_AD7298 is not set
 # CONFIG_AD7476 is not set
 # CONFIG_AD7791 is not set
@@ -3594,6 +3614,7 @@ CONFIG_IIO=m
 # CONFIG_AD7887 is not set
 # CONFIG_AD7923 is not set
 # CONFIG_AD799X is not set
+# CONFIG_MAX1027 is not set
 # CONFIG_MAX1363 is not set
 # CONFIG_MCP320X is not set
 # CONFIG_MCP3422 is not set
@@ -3627,6 +3648,7 @@ CONFIG_IIO=m
 # CONFIG_AD7303 is not set
 # CONFIG_MAX517 is not set
 # CONFIG_MCP4725 is not set
+# CONFIG_MCP4922 is not set
 
 #
 # Frequency Synthesizers DDS/PLL
@@ -3674,7 +3696,9 @@ CONFIG_IIO=m
 # CONFIG_CM32181 is not set
 # CONFIG_CM36651 is not set
 # CONFIG_GP2AP020A00F is not set
+# CONFIG_ISL29125 is not set
 # CONFIG_LTR501 is not set
+# CONFIG_TCS3414 is not set
 # CONFIG_TCS3472 is not set
 CONFIG_SENSORS_TSL2563=m
 # CONFIG_TSL4531 is not set
@@ -3684,6 +3708,7 @@ CONFIG_SENSORS_TSL2563=m
 # Magnetometer sensors
 #
 # CONFIG_AK8975 is not set
+# CONFIG_AK09911 is not set
 # CONFIG_MAG3110 is not set
 # CONFIG_IIO_ST_MAGN_3AXIS is not set
 
@@ -3697,6 +3722,7 @@ CONFIG_SENSORS_TSL2563=m
 # CONFIG_MPL115 is not set
 # CONFIG_MPL3115 is not set
 # CONFIG_IIO_ST_PRESS is not set
+# CONFIG_T5403 is not set
 
 #
 # Lightning sensors
@@ -3720,9 +3746,12 @@ CONFIG_NTB=m
 #
 # CONFIG_GENERIC_PHY is not set
 # CONFIG_BCM_KONA_USB2_PHY is not set
-# CONFIG_PHY_SAMSUNG_USB2 is not set
+# CONFIG_PHY_ST_SPEAR1310_MIPHY is not set
+# CONFIG_PHY_ST_SPEAR1340_MIPHY is not set
 # CONFIG_POWERCAP is not set
 # CONFIG_MCB is not set
+CONFIG_RAS=y
+# CONFIG_THUNDERBOLT is not set
 
 #
 # Firmware Drivers
@@ -3749,6 +3778,7 @@ CONFIG_GOOGLE_MEMCONSOLE=m
 CONFIG_EFI_VARS=y
 CONFIG_EFI_VARS_PSTORE=y
 # CONFIG_EFI_VARS_PSTORE_DEFAULT_DISABLE is not set
+CONFIG_EFI_RUNTIME_WRAPPERS=y
 
 #
 # File systems
@@ -3974,7 +4004,7 @@ CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 # printk and dmesg options
 #
 CONFIG_PRINTK_TIME=y
-CONFIG_DEFAULT_MESSAGE_LOGLEVEL=5
+CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 # CONFIG_BOOT_PRINTK_DELAY is not set
 # CONFIG_DYNAMIC_DEBUG is not set
 
@@ -4042,7 +4072,6 @@ CONFIG_DEBUG_PREEMPT=y
 # Lock Debugging (spinlocks, mutexes, etc...)
 #
 # CONFIG_DEBUG_RT_MUTEXES is not set
-# CONFIG_RT_MUTEX_TESTER is not set
 CONFIG_DEBUG_SPINLOCK=y
 # CONFIG_DEBUG_MUTEXES is not set
 # CONFIG_DEBUG_WW_MUTEX_SLOWPATH is not set
@@ -4064,7 +4093,6 @@ CONFIG_DEBUG_CREDENTIALS=y
 #
 # RCU Debugging
 #
-# CONFIG_PROVE_RCU_DELAY is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
 # CONFIG_TORTURE_TEST is not set
 # CONFIG_RCU_TORTURE_TEST is not set
@@ -4083,7 +4111,6 @@ CONFIG_NOP_TRACER=y
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_FP_TEST=y
-CONFIG_HAVE_FUNCTION_TRACE_MCOUNT_TEST=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
 CONFIG_HAVE_DYNAMIC_FTRACE_WITH_REGS=y
 CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
@@ -4134,11 +4161,14 @@ CONFIG_FTRACE_MCOUNT_RECORD=y
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_TEST_STRING_HELPERS is not set
 # CONFIG_TEST_KSTRTOX is not set
+# CONFIG_TEST_RHASHTABLE is not set
 CONFIG_PROVIDE_OHCI1394_DMA_INIT=y
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_TEST_MODULE is not set
 # CONFIG_TEST_USER_COPY is not set
 # CONFIG_TEST_BPF is not set
+# CONFIG_TEST_FIRMWARE is not set
+# CONFIG_TEST_UDELAY is not set
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_KGDB is not set
@@ -4299,6 +4329,7 @@ CONFIG_CRYPTO_CAMELLIA_AESNI_AVX2_X86_64=y
 # CONFIG_CRYPTO_CAST6 is not set
 # CONFIG_CRYPTO_CAST6_AVX_X86_64 is not set
 CONFIG_CRYPTO_DES=y
+# CONFIG_CRYPTO_DES3_EDE_X86_64 is not set
 # CONFIG_CRYPTO_FCRYPT is not set
 # CONFIG_CRYPTO_KHAZAD is not set
 # CONFIG_CRYPTO_SALSA20 is not set
@@ -4327,11 +4358,13 @@ CONFIG_CRYPTO_LZ4HC=y
 # Random Number Generation
 #
 # CONFIG_CRYPTO_ANSI_CPRNG is not set
+# CONFIG_CRYPTO_DRBG_MENU is not set
 # CONFIG_CRYPTO_USER_API_HASH is not set
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 CONFIG_CRYPTO_HW=y
 # CONFIG_CRYPTO_DEV_PADLOCK is not set
 # CONFIG_CRYPTO_DEV_CCP is not set
+# CONFIG_CRYPTO_DEV_QAT_DH895xCC is not set
 # CONFIG_ASYMMETRIC_KEY_TYPE is not set
 CONFIG_HAVE_KVM=y
 CONFIG_VIRTUALIZATION=y
@@ -4351,6 +4384,7 @@ CONFIG_GENERIC_IOMAP=y
 CONFIG_GENERIC_IO=y
 CONFIG_PERCPU_RWSEM=y
 CONFIG_ARCH_USE_CMPXCHG_LOCKREF=y
+CONFIG_ARCH_HAS_FAST_MULTIPLIER=y
 CONFIG_CRC_CCITT=y
 CONFIG_CRC16=y
 CONFIG_CRC_T10DIF=m
@@ -4399,6 +4433,8 @@ CONFIG_HAS_DMA=y
 CONFIG_CHECK_SIGNATURE=y
 CONFIG_CPU_RMAP=y
 CONFIG_DQL=y
+CONFIG_GLOB=y
+# CONFIG_GLOB_SELFTEST is not set
 CONFIG_NLATTR=y
 CONFIG_ARCH_HAS_ATOMIC64_DEC_IF_POSITIVE=y
 CONFIG_AVERAGE=y
@@ -4410,3 +4446,4 @@ CONFIG_FONT_SUPPORT=y
 # CONFIG_FONTS is not set
 CONFIG_FONT_8x8=y
 CONFIG_FONT_8x16=y
+CONFIG_ARCH_HAS_SG_CHAIN=y
