--- a/configs/ct-x64.cfg
+++ b/configs/ct-x64.cfg
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 3.17.0-rc5 Kernel Configuration
+# Linux/x86 3.17.0-rc6 Kernel Configuration
 #
 CONFIG_64BIT=y
 CONFIG_X86_64=y
@@ -2640,7 +2640,7 @@ CONFIG_RTL8180=m
 CONFIG_RTL8187=m
 CONFIG_RTL8187_LEDS=y
 CONFIG_ADM8211=m
-# CONFIG_MAC80211_HWSIM is not set
+CONFIG_MAC80211_HWSIM=m
 CONFIG_MWL8K=m
 CONFIG_ATH_COMMON=m
 CONFIG_ATH_CARDS=m
@@ -6384,8 +6384,6 @@ CONFIG_PHY_SAMSUNG_USB2=m
 # CONFIG_PHY_EXYNOS4210_USB2 is not set
 # CONFIG_PHY_EXYNOS4X12_USB2 is not set
 # CONFIG_PHY_EXYNOS5250_USB2 is not set
-CONFIG_PHY_ST_SPEAR1310_MIPHY=m
-CONFIG_PHY_ST_SPEAR1340_MIPHY=m
 CONFIG_POWERCAP=y
 CONFIG_INTEL_RAPL=m
 CONFIG_MCB=m
